--- a/style.css
+++ b/style.css
@@ -12,19 +12,20 @@ input::-ms-clear{display: none;}
  button::-moz-focus-inner {padding:0;border:0;} 
  a, a:visited, a:hover{text-decoration: none;}
   ul li{list-style: none;} img{vertical-align: top;} 
-  h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: 400;} 
+  h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: 400;
+  margin: 0;} 
 
   .container {
     max-width:1440px;
     height: auto;
-    margin: auto;
+    margin: 0 auto;
   }
 
 /* header */
 .nav_inner {
   display: flex;
   justify-content: space-between;
-  padding: 0 10px
+  padding: 0 30px
 }
 .nav_block {
   align-items:stretch;
@@ -38,10 +39,11 @@ input::-ms-clear{display: none;}
   font-style: normal;
   font-weight: 600;
   font-size: 30px;
+  margin: 30px;
 }
 .nav_item {
   padding-left:75px;
-  align-items:center;
+  align-self: center;
 }
 .nav_item a{
   font-family: 'Inter';
@@ -49,11 +51,13 @@ input::-ms-clear{display: none;}
   font-weight: 400;
   font-size: 14px;
   line-height: 24px;
-  color: black;
+
+   color:gray;
   transition: all 0.3s ease;
 }
 .nav_item a:hover{
-  font-weight: 700;
+  color: black;
+  text-decoration: underline;
 }
 .search_icon {
   width: 20px;
@@ -65,21 +69,19 @@ input::-ms-clear{display: none;}
 .search_icon:hover {
  fill:black;
 }
-.intro {
-}
 .intro_inner {
   position: relative;
 }
 .intro_img {
   width: 100%;
-  position: absolute;
+  position: relative;
 }
 .intro_block {
-  width: 691px;
-  position: relative;
+  width: 560px;
+  position: absolute;
   background-color: rgba(255, 255, 255, 0.9);
-  top: 275px;
-  padding: 0 130px;
+  top: 200px;
+  padding: 0px 70px;
 
 }
 .intro_title {
@@ -88,7 +90,7 @@ font-style: normal;
 font-weight: 500;
 font-size: 51px;
 line-height: 68px;
-padding-top: 130px;
+padding-top: 40px;
 margin-bottom: 0;
 }
 .intro_subtitle {
@@ -98,5 +100,172 @@ margin-bottom: 0;
   font-size: 32px;
   line-height: 39px;
   margin:0 ;
-  padding-bottom:80px;
+  padding-bottom: 80px;
+}
+/* OurServices */
+.OurServices {
+  background-color:#254D4D33;
+  color:#2F2E2E;
+}
+.OurServices_inner {
+}
+.OurServices_object {
+  text-align: center;
+  display: flex;
+}
+.OurService_title {
+  width: 100%;
+  font-family: 'Playfair Display';
+  font-style: normal;
+  font-weight: 500;
+  font-size: 51px;
+  line-height: 68px;
+  margin:15px 0 45px 0;
+}
+.OurServices_item {
+
+  width: 33.33333%;
+  padding: 0 10%;
+
+  font-family: 'Playfair Display';
+  font-style: normal;
+  font-weight: 500;
+
+}
+.OurServices_item h3{
+
+  font-size: 27px;
+  line-height: 36px;
+margin: 0 auto;
+}
+.OurServices_item p{
+font-size: 16px;
+line-height: 21px;
+}
+
+/* AboutUS */
+.AboutUS {
+}
+.container {
+}
+.AboutUs_inner {
+  display: flex;
+  margin: 5% 10%;
+}
+.AboutUs_group {
+  width: 50%;
+}
+.AboutUs_group h3{
+  font-family: 'Playfair Display';
+font-style: normal;
+font-weight: 500;
+font-size: 51px;
+line-height: 68px;
+}
+.AboutUs_group:nth-child(2) {
+  padding-left: 30px;
+  padding-right: 80px;
+}
+.AboutUs_group h3{
+  font-family: 'Playfair Display';
+font-style: normal;
+font-weight: 500;
+font-size: 51px;
+line-height: 68px;
+}
+.AboutUs_group p{
+  font-family: 'Playfair Display';
+  font-style: normal;
+  font-weight: 500;
+  font-size: 31px;
+  line-height: 41px;
+}
+.AboutUs_group a{
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 600;
+  font-size: 24px;
+  line-height: 29px;
+  padding-right: 10px;
+  color:black
+}
+.AboutUs_group a:hover{
+  opacity: .8;
+}
+
+.AboutUs_group img{
+  width: 100%;
+  height: auto;
+  margin-bottom: 5%;
+}
+.Testimonial {
+  font-family: 'Playfair Display';
+  font-style: normal;
+  font-weight: 500;
+}
+.Testimonial_group {
+  display: flex;
+  width: 100%;
+}
+.Testimonial_group h3{
+  width: 100%;
+  font-weight: 500;
+  font-size: 51px;
+  line-height: 68px;
+  text-align: center;
+  margin-bottom: 50px;
+}
+.Testimonial_item {
+
+  display: flex;
+  width: 50%;
+  margin: auto 5%;
+}
+.Testimonial_item_content {
+  margin: 3% 5% ;
+}
+.Testimonial_title {
+  font-size: 28px;
+  line-height: 37px;
+
+}
+.Testimonial_subtitle {
+  font-size: 17px;
+  line-height: 23px;
+
+  margin:16px 25px 0 0 ;
+
+}
+.Testimonial_img{
+  max-width: 151px;
+  max-height: 151px;
+}
+/* footer */
+.footer {
+  margin-top: 70px;
+  background-color:#2E2F32;
+}
+
+.footer_inner {
+ padding: 36px 0 26px 100px;
+}
+.social_item  svg{
+  fill:#FAFAFA;
+  cursor: pointer;
+  margin-right: 36px;
+  width: 21.89px;
+  height: 21.93px;
+  transition: all .3s linear ;
+  border-radius: 30%;
+}
+.social_item:nth-child(1)  svg:hover{
+  fill:rgb(4, 4, 82)
+}
+.social_item:nth-child(2)  svg:hover{
+  background: linear-gradient(45deg, #405de6, #5851db, #833ab4, #c13584, #e1306c, #fd1d1d);
+  fill: linear-gradient(45deg, #405de6, #5851db, #833ab4, #c13584, #e1306c, #fd1d1d);
+
+}
+.social_item:nth-child(3)  svg:hover{
+  fill:rgb(105, 132, 254)
 }
