--- a/style.css
+++ b/style.css
@@ -262,8 +262,8 @@ line-height: 68px;
   fill:rgb(4, 4, 82)
 }
 .social_item:nth-child(2)  svg:hover{
-  background: linear-gradient(45deg, #405de6, #5851db, #833ab4, #c13584, #e1306c, #fd1d1d);
-  fill: linear-gradient(45deg, #405de6, #5851db, #833ab4, #c13584, #e1306c, #fd1d1d);
+
+  fill: #c13584;
 
 }
 .social_item:nth-child(3)  svg:hover{
